cmake_minimum_required(VERSION 3.20)
project(MQ2Viewport LANGUAGES CXX)

# ── Paths ──────────────────────────────────────────────────────────────────────
set(MQ_ROOT "${CMAKE_SOURCE_DIR}/../macroquest" CACHE PATH "Path to macroquest repo")
set(STUB_LIBS_DIR "${CMAKE_SOURCE_DIR}/build/stubs" CACHE PATH "Dir containing stub .lib files")

if(NOT EXISTS "${MQ_ROOT}/include/mq/Plugin.h")
    message(FATAL_ERROR
        "MacroQuest not found at: ${MQ_ROOT}\n"
        "Clone it: git clone --recurse-submodules https://github.com/macroquest/macroquest ${MQ_ROOT}")
endif()

# ── Source files ───────────────────────────────────────────────────────────────
# pluginapi.cpp is compiled directly into our plugin (it's a static shim)
set(PLUGINAPI_SRC "${MQ_ROOT}/src/plugins/pluginapi/pluginapi.cpp")

add_library(MQ2Viewport SHARED
    MQ2Viewport.cpp
    "${PLUGINAPI_SRC}"
)

# ── Compile definitions ────────────────────────────────────────────────────────
target_compile_definitions(MQ2Viewport PRIVATE
    WIN32
    _WIN32
    _WINDOWS
    UNICODE
    _UNICODE
    NOMINMAX
    WIN32_LEAN_AND_MEAN
    _WIN32_WINNT=0x0601
    WINVER=0x0601

    # Use header-only modes so we don't need to link Windows builds of these libs
    FMT_HEADER_ONLY=1
    SPDLOG_HEADER_ONLY=1
    SPDLOG_FMT_EXTERNAL=1

    # Plugin mode (not building MQ2Main itself)
    MQ2PLUGIN

    # Suppress DEPRECATE() macros (they use [[deprecated]] in positions that
    # clang-cl rejects; COMMENT_UPDATER is the official MQ mechanism to disable them)
    COMMENT_UPDATER=1
)

# ── Compile options ────────────────────────────────────────────────────────────
target_compile_options(MQ2Viewport PRIVATE
    /std:c++17
    /EHsc
    /MD           # Dynamic CRT (matches MQ2Main)
    /permissive-
    /Zc:__cplusplus
    # Suppress warnings that are common in cross-compilation
    /wd4005       # macro redefinition
    /wd4244       # conversion, possible loss of data
    /wd4267       # conversion from size_t
    /wd4996       # deprecated declarations
)

# ── Include paths ──────────────────────────────────────────────────────────────
target_include_directories(MQ2Viewport PRIVATE
    # Patched headers that shadow problematic MSVC-isms in eqlib for clang compatibility
    # (generated by build.sh from the originals with minimal fixes)
    "${CMAKE_SOURCE_DIR}/build/patches"

    # MQ public API headers
    "${MQ_ROOT}/include"

    # MQ internal headers (pch.h, MQ2Main.h, all subsystems)
    "${MQ_ROOT}/src/main"

    # eqlib headers
    "${MQ_ROOT}/src/eqlib/include"
    "${MQ_ROOT}/src/eqlib/include/eqlib"

    # Common utils
    "${MQ_ROOT}/src/common"

    # Third-party in contrib (imgui/, Blech/ via symlink as blech/)
    "${MQ_ROOT}/contrib"

    # imgui (included as <imgui/imgui.h>, contrib/imgui/ exists)
    # Blech (included as "blech/Blech.h", contrib/blech/ symlink needed)

    # Source tree root for <imgui/imgui.h> if contrib path doesn't work
    "${MQ_ROOT}/src"

    # DirectX SDK D3DX9 headers (downloaded from NuGet by build.sh)
    "${CMAKE_SOURCE_DIR}/build/dxsdk/headers"

    # spdlog / fmt / glm — via redirect dir that has ONLY these headers
    # (no Linux system headers, avoids type conflicts with Windows SDK)
    # build.sh creates build/thirdparty_headers/ with symlinks to the packages
    "${CMAKE_SOURCE_DIR}/build/thirdparty_headers"
)

# ── Link libraries ─────────────────────────────────────────────────────────────
target_link_directories(MQ2Viewport PRIVATE
    "${STUB_LIBS_DIR}"
)

target_link_libraries(MQ2Viewport PRIVATE
    # Stub import libs (generated by build.sh from .def files)
    "${STUB_LIBS_DIR}/MQ2Main.lib"
    "${STUB_LIBS_DIR}/eqlib.lib"
    "${STUB_LIBS_DIR}/detours.lib"    # empty stub (not used at runtime)
    "${STUB_LIBS_DIR}/imgui-64.lib"   # empty stub (LIVE: ImGui lives in MQ2Main.dll)
    "${STUB_LIBS_DIR}/imgui.lib"      # empty stub (EMU: ImGui lives in MQ2Main.dll)
    "${STUB_LIBS_DIR}/pluginapi.lib"  # empty stub (pluginapi.cpp compiled inline)

    # Windows system libs (from xwin, paths set by toolchain)
    kernel32.lib
    user32.lib
    gdi32.lib
    advapi32.lib
    shell32.lib
    ole32.lib
    oleaut32.lib
    uuid.lib
    comdlg32.lib
    winspool.lib
    odbc32.lib
    odbccp32.lib
    winmm.lib  # mmsystem.lib is part of winmm on modern Windows SDK
    ws2_32.lib
    version.lib
    psapi.lib
    pathcch.lib
    msvcrt.lib
    msvcprt.lib
    vcruntime.lib
    ucrt.lib
)

# ── DLL output settings ────────────────────────────────────────────────────────
set_target_properties(MQ2Viewport PROPERTIES
    OUTPUT_NAME "MQ2Viewport"
    SUFFIX ".dll"
    PREFIX ""
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)
